Register, ModelStateErrors, AppSettings

--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "JwtSecret": "u7dfdfsa111xxAAbbCCDDFF3345",
+    "JwtIssuer": "https://localhost:44371"
+  },
   "ConnectionStrings": {
     "TodoContext": "Data Source=(localdb)\\MSSQLLocalDb; Initial Catalog=TodoApiDb; Integrated Security=true;"
   },
